# mcp-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  glama.json  pyproject.toml  pytest.ini
_docs/: auth-provider-auth0.md  connect-mcp-client.md  httpx-client.md  mcp-sdk-auth-vs-custom-oauth.md  testing.md  why-not-mcp-sdk-auth-framework.md
_docs/adr/: 001-choose-fastmcp.md  002-choose-httpx.md  ADR-template.md  README.md
scripts/: generate-secrets.sh  run-mcp-server.sh
src/mcp_server/: mcp_instance.py  server.py
src/mcp_server/components/: __init__.py
src/mcp_server/components/prompts/: travel_prompts.py
src/mcp_server/components/resources/: weather.py
src/mcp_server/components/tools/: auth_additional.py  auth_user.py  itinerary.py
src/mcp_server/config/: auth_provider.py  custom_routes.py
src/mcp_server/core/services/: itenerary_service.py
src/mcp_server/handlers/: __init__.py
src/mcp_server/handlers/tools/: auth_additional.py  itinerary.py
src/mcp_server/lib/: clerk_auth_provider.py  httpx_client.py
src/mcp_server/models/: __init__.py  itinerary_models.py
src/mcp_server/prompt_templates/: travel.py
src/mcp_server/services/: itenerary_service.py
src/mcp_server/utils/: __init__.py  elicitation.py  get_weather_forecast.py  helpers.py  http.py  register_mcp_components.py  types.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  context.py  weather.py
tests/integration/: __init__.py  test_itinerary_tool.py  test_weather_api.py
tests/unit/: __init__.py  test_elicitation.py  test_models.py  test_travel_prompts.py  test_weather_forecast.py  test_weather_resource.py
