[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coxs-bazar-itinerary-mcp-server"
version = "0.1.0"
description = "Cox's Bazar AI Itinerary MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.20.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]

[project.scripts]
cox-mcp-server = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.uv]
package = true
