[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coxs-bazar-itinerary-mcp-server"
version = "0.1.0"
description = "Cox's Bazar AI Itinerary MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "py-key-value-aio[redis]>=0.2.8",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
cox-mcp-server = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/mcp_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
